# haskell-chess

./: README.md  chess.cabal
src/: BishopMove.hs  Board.hs  Engine.hs  Evaluation.hs  GlideMove.hs  InitBoard.hs  KingMove.hs  KnightMove.hs  Main.hs  Model.hs  Move.hs  PawnMove.hs  Printer.hs  QueenMove.hs  RandomEngine.hs  RookMove.hs
test/: Main.hs  TestMain.hs
