name: chess
version: 0.0.1
cabal-version: 1.12
build-type: Simple
license: AllRightsReserved
license-file: ""
synopsis: chess experiments in haskell
description: where I do all the fun stuff!
data-dir: ""

executable chess
    build-depends: base -any, utf8-string ==1.0.1.1, bytestring -any
    main-is: Main.hs
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: src
    ghc-options: -ferror-spans

test-suite test-chess
    build-depends: base, QuickCheck -any, base -any, doctest -any, chess
    type: exitcode-stdio-1.0
    main-is: TestMain.hs
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: test
    ghc-options: -ferror-spans

